Update and rename TaxcSiriusPowerCurves.ipynb to TacxSiriusPowerCurves.ipynb
correcting typos

--- a/TacxSiriusPowerCurves.ipynb
+++ b/TacxSiriusPowerCurves.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "plt.xlabel('Speed, km/h')\n",
     "plt.ylabel('Power, W')\n",
-    "plt.title('Taxc Sirius power curves')\n",
+    "plt.title('Tacx Sirius power curves')\n",
     "plt.legend()\n",
     "plt.axis([0, 70, 0, 450])\n",
     "plt.show()"
